--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -44,6 +44,6 @@
     </table>
 
     <h3>Total pris: <span th:text="${total}"></span> kr.</h3>
-    <a href="#">Gå til betaling</a>
+    <a href="/checkout">Gå til betaling</a>
 </body>
 </html>
