before merge to master

--- a/src/main/resources/templates/listProducts.html
+++ b/src/main/resources/templates/listProducts.html
@@ -22,5 +22,17 @@
 
     </tr>
 
+<a href="#">Tilbage</a>
+
+<form>
+    <select>
+        <option>1</option>
+        <option>2</option>
+        <option>3</option>
+    </select> ud af 3
+</form>
+
+<a href="#">Næste</a>
+
 </body>
 </html>
