--- a/src/main/resources/templates/listProducts.html
+++ b/src/main/resources/templates/listProducts.html
@@ -22,17 +22,32 @@
 
     </tr>
 
-<a href="#">Tilbage</a>
+    <tr th:if="${currentPage-1 != 0}">
+        <a th:href="${currentPage-1}">Tilbage</a>
+    </tr>
 
-<form>
-    <select>
-        <option>1</option>
-        <option>2</option>
-        <option>3</option>
+    <!--<p th:text="${'På lager: ' + product.stock}"></p>
+    <form action="myservlet.do" method="POST">
+    <select name="myselect" id="myselect" onchange="this.form.submit()">
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+        <option value="4">Four</option>
+    </select>
+</form>-->
+
+<form tH:method="post" th:action="@{/listProducts/}">
+    <select name="page" onchange='this.form.submit()'>
+        <option th:value="1">1</option>
+        <option th:value="2">2</option>
+        <option th:value="3">3</option>
     </select> ud af 3
 </form>
 
-<a href="#">Næste</a>
+    <tr th:if="${currentPage < maxPages}">
+        <a th:href="${currentPage+1}">Næste</a>
+    </tr>
+
 
 </body>
 </html>
