--- a/src/main/resources/templates/listProducts.html
+++ b/src/main/resources/templates/listProducts.html
@@ -16,7 +16,7 @@
                 <input type="hidden" name="productId" th:value="${product.productId}"/>
                 <input type="number" th:name="amount" value="1"/>
 
-                <button href="/listProducts" type="submit" value="Tilføj"></button>
+                <button href="/listProducts" type="submit" value="Tilføj">Læg i Kurv</button>
 
             </form>
 
@@ -38,10 +38,8 @@
 
 <form tH:method="post" th:action="@{/listProducts/}">
     <select name="page" onchange='this.form.submit()'>
-        <option th:value="1">1</option>
-        <option th:value="2">2</option>
-        <option th:value="3">3</option>
-    </select> ud af 3
+        <option th:each="pageFromArray : ${pageArray}" th:value="${pageFromArray}" th:text="${pageFromArray}"  th:selected="${pageFromArray==currentPage}"></option>
+    </select><h5 th:text="'ud af ' +${maxPages}"></h5>
 </form>
 
     <tr th:if="${currentPage < maxPages}">
