--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,6 +4,7 @@
         <!-- Brand/logo -->
         <a class="navbar-brand" href="/">
             <span id="logo">VapeCenter</span>
+            <!--<img src="/images/VCnavbar.jpg" height="60px" width="80px">-->
         </a>
 
         <!-- Links -->
@@ -21,35 +22,30 @@
                 <a class="nav-link" href="/listProducts">produkter</a>
             </li>
             <li class="nav-item"><div class = "dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="/aw">e væske</a>
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">E-væske</a>
                 <ul class="dropdown-menu dropdown-content">
-                    <li> <a href = "#"> Væske 1 </a></li>
-                    <li>test2</li>
+                    <li th:each="category : ${categories}" th:if="${category.categorySubList==1}"> <a th:href = "'/category/'+${category.categoryId}"><span th:text="${category.categoryName}"></span></a></li>
                 </ul>
             </div>
             </li>
         <li class="nav-item"><div class = "dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="/aw">E-Cigaret</a>
             <ul class="dropdown-menu dropdown-content" >
-                <li> <a href = "#"> Begynder Kits </a></li>
-                <li>test2</li>
+                <li th:each="category : ${categories}" th:if="${category.categorySubList==2}"> <a th:href = "'/category/'+${category.categoryId}"><span th:text="${category.categoryName}"></span></a></li>
             </ul>
         </div>
         </li>
         <li class="nav-item"><div class = "dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="/aw">Tanke & Coils</a>
             <ul class="dropdown-menu dropdown-content">
-                <li> <a href = "#"> Coils & Pods </a></li>
-                <li>test2</li>
+                <li th:each="category : ${categories}" th:if="${category.categorySubList==3}"> <a th:href = "'/category/'+${category.categoryId}"><span th:text="${category.categoryName}"></span></a></li>
             </ul>
         </div>
+        <li class = "nav-item">
+            <a class ="btn btn-outline-dark btn-sm" href= "/cart"><span class="fas fa-shopping-cart">cart</span> </a>
         </li>
-            <li class = "nav-item">
-                <a class ="nav-item" href= "/cart"> Gå til kassen</a>
-            </li>
-            <li class = "fas fa-search-location">
-             <a class = "nav-item" href = "/search"></a>
-        </li>
+            <!--<li class = "fas fa-search-location">
+             <a class = "nav-item" href = "/search"></a>-->
         </ul>
     </nav>
 </div>
