--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,9 @@
     <!--<link th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" rel="stylesheet" media="screen"/>-->
 </head>
 <body>
-<h1>Welcome to vapecenter</h1>
+    <div class="container">
+        <h1>Welcome to vapecenter</h1>
 
+    </div>
 </body>
 </html>
