--- a/src/main/resources/templates/paymentProcess.html
+++ b/src/main/resources/templates/paymentProcess.html
@@ -4,15 +4,44 @@
     <!--<link th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" rel="stylesheet" media="screen"/>-->
 </head>
 <body>
-    <form action="/creditcardAccept" method="Post">
-        CardNumber:<br>
-        <input type="number" name="cardnumber"><br>
-        Expire dato:<br>
-        <input type="number" name="month" min="1" max="99"> / <input type="number" name="year" min="1" max="99"><br>
-        Sequritycode:<br>
-        <input type="number" name="securitycode" min="1" max="999"><br>
-        <button type="submit">OK</button>
-    </form>
+    <div class="container">
+        <h1>Gå til kassen</h1>
+        <h2>Kortbetaling</h2>
+        <form action="/creditcardAccept" method="Post" class="was-validated">
+            <div class="form-row">
+                <div class="form-group col-md-6">
+                    <label for="cardnumber">Kort nummer:</label>
+                    <input type="number" class="form-control" id="cardnumber" name="cardnumber" required>
+                    <div class="valid-feedback"><i class="fas fa-check"></i></div>
+                    <div class="invalid-feedback"><i class="fas fa-exclamation"></i> Kortnummer påkrævet</div>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-2">
+                    <label for="month">Udløbsdato:</label>
+                    <input type="number" id="month" class="form-control" name="month" min="1" max="99" required>
+                    <div class="valid-feedback"><i class="fas fa-check"></i></div>
+                    <div class="invalid-feedback"><i class="fas fa-exclamation"></i> Udløbsmåned påkrævet</div>
+                </div>
+                <div class="form-group col-md-2">
+                    <label for="year">-</label>
+                    <input type="number" id="year" class="form-control" name="year" min="1" max="99" required>
+                    <div class="valid-feedback"><i class="fas fa-check"></i></div>
+                    <div class="invalid-feedback"><i class="fas fa-exclamation"></i> Udløbsår påkrævet</div>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="form-group col-md-2">
+                    <label for="securitycode">Sikkerheds kode::</label>
+                    <input type="number" id="securitycode" class="form-control" name="securitycode" min="1" max="999" required>
+                    <div class="valid-feedback"><i class="fas fa-check"></i></div>
+                    <div class="invalid-feedback"><i class="fas fa-exclamation"></i> Sikkerhedskode påkrævet</div>
+                </div>
+            </div>
 
+            <button type="button" class="btn btn-outline-dark" onclick="location.href='/delivery';">Tilbage</button>
+            <button type="submit" class="btn btn-dark">Godkend</button>
+        </form>
+    </div>
 </body>
 </html>
