--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -104,10 +104,10 @@ div#aboutUsDetails{
 
 }
 
-a:hover {
+/*a:hover {
     color: #fffafe;
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
-}
+}*/
