--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,7 +8,7 @@
         </a>
 
         <!-- Links -->
-        <li class="navbar-nav">
+        <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="/">Forside</a>
             </li>
@@ -16,41 +16,43 @@
                 <a class="nav-link" href="/Nyheder">nyheder</a>
             </li>
             <li class="nav-item">
-
-            </li>
-            <li class="nav-item">
                 <a class="nav-link" href="/listProducts">produkter</a>
             </li>
-            <li class="nav-item"><div class = "dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">E-væske</a>
-                <ul class="dropdown-menu dropdown-content">
-                    <li th:each="category : ${categories}" th:if="${category.categorySubList==1}"> <a th:href = "'/category/'+${category.categoryId}"><span th:text="${category.categoryName}"></span></a></li>
-                </ul>
-            </div>
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbardrop" href="#">E-væske</a>
+                <div class="dropdown-menu">
+                    <a th:each="category : ${categories}" th:if="${category.categorySubList==1}" th:href="'/category/'+${category.categoryId}" th:text="${category.categoryName}" class="dropdown-item"></a>
+                </div>
             </li>
-        <li class="nav-item"><div class = "dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="/aw">E-Cigaret</a>
-            <ul class="dropdown-menu dropdown-content" >
-                <li th:each="category : ${categories}" th:if="${category.categorySubList==2}"> <a th:href = "'/category/'+${category.categoryId}"><span th:text="${category.categoryName}"></span></a></li>
-            </ul>
-        </div>
-        </li>
-        <li class="nav-item"><div class = "dropdown">
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbardrop" href="/aw">E-Cigaret</a>
+                <div class="dropdown-menu" >
+                    <a th:each="category : ${categories}" th:if="${category.categorySubList==2}" th:href = "'/category/'+${category.categoryId}" th:text="${category.categoryName}" class="dropdown-item"></a>
+                </div>
+            </li>
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbardrop" href="/aw">Tanke & Coils</a>
+                <div class="dropdown-menu" >
+                    <a th:each="category : ${categories}" th:if="${category.categorySubList==3}" th:href = "'/category/'+${category.categoryId}" th:text="${category.categoryName}" class="dropdown-item"></a>
+                </div>
+            </li>
+        <!--<li class="nav-item"><div class = "dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="/aw">Tanke & Coils</a>
             <ul class="dropdown-menu dropdown-content">
                 <li th:each="category : ${categories}" th:if="${category.categorySubList==3}"> <a th:href = "'/category/'+${category.categoryId}"><span th:text="${category.categoryName}"></span></a></li>
             </ul>
-        </div>
-        <li class = "nav-item">
-            <a class ="btn btn-outline-dark btn-sm" href= "/cart"><span class="fas fa-shopping-cart">cart</span> </a>
-        </li>
-        <li class="nav-item">
-            <form action="/" th:action="@{/search}" method="post">
-            <input type="text" th:name="searchProduct" placeholder="Søg efter produkt...">
-            <button type="submit">Søg</button>
-            </form>
-        </li>
+        </div>-->
         </ul>
+
+        <a class ="btn btn-success mx-4" href= "/cart"><i class="fas fa-shopping-cart"></i> Indkøbskurv</a>
+
+        <form action="/" th:action="@{/search}" method="post" class="form-inline">
+            <input type="text" th:name="searchProduct" placeholder="Søg efter produkt..." class="form-control mr-2">
+            <button type="submit" class="btn btn-primary">Søg</button>
+        </form>
     </nav>
 </div>
 
