--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -5,6 +5,8 @@
 </head>
 <body>
     <div class="container">
+        <header th:include="fragments/header :: navbar"></header>
+
         <h1><i class="fas fa-shopping-cart"></i> Indkøbskurv</h1>
         <h2>Indhold i indkøbskurv</h2>
 
