--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -5,6 +5,8 @@
 </head>
 <body>
     <div class="container">
+        <header th:include="fragments/header :: navbar"></header>
+
         <h1>Gå til kassen</h1>
         <h2>Udfyld dine informationer</h2>
         <form method="post" th:action="@{/checkout}" th:object="${checkout}" class="needs-validation">
