--- a/src/main/resources/templates/creditcardAccept.html
+++ b/src/main/resources/templates/creditcardAccept.html
@@ -5,6 +5,8 @@
 </head>
 <body>
     <div class="container">
+        <header th:include="fragments/header :: navbar"></header>
+
         <h1 class="text-success"><i class="fas fa-check"></i> Betaling Gennemført</h1>
         <a href="/" class="btn btn-dark"><i class="fas fa-cash-register"></i> Gå til forsiden</a>
     </div>
