--- a/src/main/resources/templates/listProducts.html
+++ b/src/main/resources/templates/listProducts.html
@@ -5,6 +5,8 @@
 </head>
 <body>
     <div class="container">
+        <header th:include="fragments/header :: navbar"></header>
+
         <h1>Alle Producter</h1>
         <!--<table class="table table-borderless">
             <tr class="active" th:each="product : ${productList}">
