--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -5,6 +5,9 @@
 </head>
 <body>
 
+<div class="container">
+    <header th:include="fragments/header :: navbar"></header>
+
     <h1 th:text="${categoryName}"></h1>
     <span class="active" th:each="product : ${productList}">
 
@@ -34,6 +37,8 @@
     </form>
 
     <a href="#">Næste</a>
+
+</div>
 
 </body>
 </html>
