category pages added

--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -25,18 +25,17 @@
     </span>
 
     <br><hr><br>
+    <div id="pageSelect" class="p-6">
+        <a th:if="${currentPage-1 != 0}" th:href="'/category/'+${categoryId}+'/'+${currentPage-1}" class="btn btn-dark d-block float-left">Tilbage</a>
 
-    <a href="#">Tilbage</a>
+        <form th:method="post" th:action="'/category/'+${categoryId}+'/'" class="form-inline d-block mx-2 float-left">
+            <select name="page" onchange='this.form.submit()'class="form-control mr-2">
+                <option th:each="pageFromArray : ${pageArray}" th:value="${pageFromArray}" th:text="${pageFromArray}"  th:selected="${pageFromArray==currentPage}"></option>
+            </select><span th:text="'ud af ' +${maxPages}"></span>
+        </form>
 
-    <form>
-        <select>
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-        </select> ud af 3
-    </form>
-
-    <a href="#">Næste</a>
+        <a th:if="${currentPage < maxPages}" th:href="'/category/'+${categoryId}+'/'+${currentPage+1}" class="btn btn-dark d-block float-left">Næste</a>
+    </div>
 
 </div>
 
