--- a/src/main/resources/templates/editProduct.html
+++ b/src/main/resources/templates/editProduct.html
@@ -3,7 +3,7 @@
 <head th:include="fragments/head :: styles">
 <body>
 <div class="container">
-<!--    <header th:include="fragments/header :: adminNavbar"></header>-->
+    <header th:include="fragments/header :: adminNavbar"></header>
 
     <h1 th:text="${'Rediger Produktet (' + product.name + ')'}"></h1>
 
